[package]
name = "wasmtime-jni"
version = "0.1.0"
authors = ["Yuto Kawamura <kawamuray.dadada@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[dependencies]
jni = "0.20.0"
thiserror = "1.0.30"
anyhow = "1.0.56"
wasmtime = "3.0.1"
wasmtime-wasi = "3.0.1"
wasi-common = "3.0.1"
wasi-cap-std-sync = "3.0.1"
cap-std = "0.26.1"
