[package]
name = "wasmtime-jni"
version = "0.1.0"
authors = ["Yuto Kawamura <kawamuray.dadada@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[dependencies]
jni = "0.20.0"
thiserror = "1.0.38"
anyhow = "1.0.69"
wasmtime = "5.0.0"
wasmtime-wasi = "5.0.0"
wasi-common = "5.0.0"
wasi-cap-std-sync = "5.0.0"
cap-std = "1.0.5"
